--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -65,4 +65,8 @@ consul_port_server: 8300
 consul_install_dnsmasq: false
 consul_install_consulate: false
 
-consul_node_name: "{{ inventory_hostname }}"
+consul_node_name: "{{ ansible_hostname }}"
+
+consul_service_setup: false
+consul_service_name: "default"
+consul_service_tags: ["master"]
