--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,6 @@ galaxy_info:
         - 7
   categories:
     - system
-dependencies:
-  - { role: franklinkim.nginx, when: consul_is_ui == true and ansible_os_family == "Debian"}
-  - { role: geerlingguy.nginx, when: consul_is_ui == true and ansible_os_family == "RedHat"}
+# dependencies:
+#   - { role: franklinkim.nginx, when: consul_is_ui == true and ansible_os_family == "Debian"}
+#   - { role: geerlingguy.nginx, when: consul_is_ui == true and ansible_os_family == "RedHat"}
